# sessions

./: README.md  session-1 Introduction.pptx  session-1.pptx  session-2.txt  session3.txt  session4.txt  session5.txt  session6.txt
exercise-1/: Makefile  README.md  common.h  meson.build  myqueue.c
exercise-1/ver1/: main.c
exercise-1/ver2/: Makefile  common.h  main.c  meson.build  myqueue.c
